fix URI on _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ disqus_shortname: ""
 
 
 
-url: "http://lc-tut.github.io"
-imgrepo: "http://lc-tut.github.io/static/img"
+url: "https://lc-tut.github.io"
+imgrepo: "https://lc-tut.github.io/static/img"
 
 
 #url: "http://127.0.0.1:4000"
