fix config for html-escape. ref: https://budougumi0617.github.io/2020/03/10/hugo-render-raw-html/

--- a/blog/config.toml
+++ b/blog/config.toml
@@ -52,6 +52,11 @@ name  = "date"
 weight = 10
 pattern = "2006"
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 # You can have link at the footer as below
 # [[menu.footer]]
 #     name = "DISCLAIMER"
